@@ -40,10 +40,16 @@ Math::BigInt::GMP or Math::GMPz then this module should have no issues.
   Ubuntu:     sudo apt-get install libgmp3 libgmp3-dev
   Cygwin:     install gmp, libgmp-devel, libgmp3
 
+
 If you would like to make a standalone executable for ECPP:
 
-  gcc -O3 -DSTANDALONE -DSTANDALONE_ECPP ecpp.c bls75.c ecm.c simpqs.c \
-       prime_iterator.c gmp_main.c small_factor.c utility.c -lgmp -lm
+  gcc -O3 -fomit-frame-pointer -DSTANDALONE -DSTANDALONE_ECPP ecpp.c bls75.c \
+       ecm.c simpqs.c prime_iterator.c gmp_main.c small_factor.c utility.c \
+       -o ecpp-dj -lgmp -lm
+
+I recommend you get the large discriminent set from:
+  https://github.com/danaj/Math-Prime-Util-GMP/tree/master/xt/
+
 
 DEPENDENCIES
 
